--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- *************  header - Makhan   *************** -->
-    <header></header>
+    <header>header</header>
     <main>
         
         <!--  **************  Page acceuill - Makhan  ***************    -->
