--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h1>
           Bring the best of open <br />
           source to you, your team, <br />
-          and your company
+          and your companie
         </h1>
         <br />
         <p>
